--- a/templates/searched.html
+++ b/templates/searched.html
@@ -8,7 +8,7 @@
     <main class='container-fluid py-5'>
         <div class="container">
 
-            <h1 style="font-size: 45px;">You have searched for: {{ nameSite }}</h1>
+            <h1 style="font-size: 45px;">Keyword: {{ nameSite }}</h1>
             <hr>
 
             <table class="table table-hover table-bordered border" id="table-passwords">
